# ARK

./: .dockerignore  .env.example  .env.prod  .gitignore  ALL_PORTS_URLS.md  DEPLOYMENT_CHECKLIST.txt  Dockerfile.ark  Dockerfile.autoscaler  Dockerfile.composio  Dockerfile.duckdb  Dockerfile.gateway  Dockerfile.ha-emitter  Dockerfile.ingestion-leader  Dockerfile.jellyfin-emitter  Dockerfile.mesh  Dockerfile.netwatch  Dockerfile.opencode  Dockerfile.openwolf  Dockerfile.stability-kernel  Dockerfile.unifi-emitter  FORGE_START_HERE.md  GLOSSARY.md  INDEX.md  Makefile  PRODUCTION_GUIDE.txt  README.md  WIRING_GUIDE.txt  backup-prod.sh  conftest.py  coverage.xml  deploy-prod.sh  docker-compose-additions.yml  docker-compose.prod.yml  docker-compose.yml  forge-app  forge.cmd  forge.ps1  go.mod  init-prod.sh  install-forge-arch.sh  (+4 more)
.githooks/: post-commit
ark/: Cargo.toml  api_gateway.py  ark_schema.py  autoscaler.py  config.py  duck_client.py  event_schema.py  import_audit.py  maintenance.py  mesh_registry.py  sd_trisca.py  security.py  subjects.py  task_graph.py  web_console.py
ark-core/: .dockerignore  .env.example  .gitignore  README.md  compose.yaml  docker-compose.yml  go.mod  pyproject.toml  requirements-dev.txt
ark-ssot-mvp/: README.md
ark/integrations/: registry.py
ark/src/: lib.rs  main.rs
ark/src/compress/: zstd.rs
ark/src/control/: plane.rs
ark/src/delta/: compute.rs
ark/src/storage/: duck.rs
ark/src/trisca/: core.rs  kalman.rs  mod.rs
authelia/: configuration.yml  users_database.yml
config/: ark.env
core/: step.go
definitions/: actions.yaml  (+3 more)
(+578 files in other folders)
